# lolistorage

./: .gitignore  Cargo.toml  README.md
config/: default.json
src/: api.rs  config.rs  dir.rs  error.rs  file.rs  handlebars.rs  header.rs  main.rs  storage.rs
templates/: footer.hbs  layout.hbs  view.hbs
templates/icons/: archive.hbs  chevron-left.hbs  code.hbs  cog.hbs  database.hbs  document-text.hbs  document.hbs  dots-horizontal.hbs  film.hbs  folder-open.hbs  folder.hbs  mail.hbs  music-note.hbs  photograph.hbs  presentation-chart-bar.hbs  table.hbs  terminal.hbs
templates/view/: file.hbs  folder.hbs
