[package]
name = "lolistorage"
version = "0.1.0"
authors = ["chiya.dev <contact@chiya.dev>"]
edition = "2018"

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
config = "0.10.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", features = ["handlebars_templates"] }
once_cell = "1.4.1"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
async-trait = "0.1.38"
